# ai_time_series_forcasting

./: .gitignore  README.md  TODO.md  app.py  performance_7926920884040829739.json  pyproject.toml  requirements.txt
src/: ai_parameter_optimizer.py  backtesting.py  data_fetcher.py  enhanced_data_fetcher.py.bak  ensemble_forecaster.py  forecasting.py  llm_integration.py  market_indicators.py  multi_period_forecaster.py  technical_analysis.py
src/utils/: chart_renderer.py
tests/: simple_arima_validation.py  test_arima_frequency_fix.py
