[project]
name = "ai-time-series-forcasting"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "darts>=0.30.0",
    "lightgbm>=4.3.0",
    "neuralprophet>=0.8.4",
    "numpy>=1.26.4,<2.0.0",
    "optuna>=3.6.1,<4.0.0",
    "pandas>=2.2.2,<3.0.0",
    "plotly>=6.2.0",
    "prophet>=1.1.7,<2.0.0",
    "pytorch-lightning>=2.2.5",
    "requests>=2.32.4",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.1",
    "streamlit>=1.48.0",
    "talipp>=2.6.0",
    "tensorflow>=2.16.1",  # 2.16.1 is latest for Python 3.12
    "torch>=2.3.0",
    "xgboost>=2.0.3",
    "yfinance>=0.2.40",
    "ccxt>=4.3.77",
    "pycoingecko>=3.1.0",
    "get-all-tickers>=1.7.1",
]